# deepseek-agent

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  env.example
examples/: basic_usage.md  continue_example.md
src/: agent.rs  api.rs  api_client.rs  config.rs  fetch.rs  history.rs  interrupt.rs  lib.rs  main.rs  security.rs  session.rs  shell.rs  streaming.rs  token_management.rs  ui.rs
tests/: integration.rs
