[package]
name = "deepseek-agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A minimal DeepSeek agent CLI with shell execution capability"
repository = "https://github.com/your-username/deepseek-agent"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "12.0"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true